# kna-history-new

./: .env.development  .gitignore  pyproject.toml
docker/: Dockerfile  docker-compose.yml  env.example
src/: app.py  config.py  logging_kna.py  setup.py
src/blueprints/: activity.py  core.py  forms.py  media.py  member.py
src/content_db/: __init__.py  config.py  database.py  load_from_excel.py  models.py
src/content_db/services/: __init__.py  activity_service.py  media_mention_service.py  media_service.py  member_service.py  reader.py  role_service.py
src/static/css/: custom.css
src/templates/: activity_detail.html  activity_form.html  activity_list.html  base.html  index.html  media_gallery.html  member_detail.html  member_form.html  member_list.html  roles_list.html  upload.html
src/templates/partials/: member_quick_form.html  member_select.html  roles_list.html
src/utils/: __init__.py  file_utils.py
